--- a/app/src/main/res/layout/fragment_player_summary.xml
+++ b/app/src/main/res/layout/fragment_player_summary.xml
@@ -31,7 +31,7 @@
         <ImageView
             style="@style/SummaryIcon"
             android:contentDescription="@string/small_coin"
-            android:src="@drawable/small_coin"/>
+            android:src="@drawable/small_crown"/>
 
         <ImageView
             style="@style/SummaryIcon"
