--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,14 +5,47 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TitleText">
+        <item name="android:textSize">64dp</item>
+    </style>
+
     <style name="SummaryIcon">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
+
     <style name="SummaryValue">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="CardIcon">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="DogmaIcon">
+        <item name="android:layout_width">16dp</item>
+        <item name="android:layout_height">16dp</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
+
+    <style name="CardName">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CardLayout">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">200dp</item>
     </style>
 </resources>
